--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
   "blur_threshold": 50.0,
-  "resize_width": 800,
-  "resize_height": 600,
-  "sift_features": 2000,
+  "resize_width": 0,
+  "resize_height": 0,
+  "sift_features": 500,
   "matcher_ratio": 0.7,
-  "ransac_threshold": 5.0,
+  "ransac_threshold": 9.0,
   "panorama_mode": "panorama",
   "enable_blur_filter": true,
-  "enable_resize": true,
+  "enable_resize": false,
   "enable_fallback": true
 }
